added form for netlify

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.0",
     "@fortawesome/vue-fontawesome": "^3.0.0-1",
+    "axios": "^0.21.0",
     "core-js": "^3.6.5",
     "prerender-spa-plugin": "^3.4.0",
     "vue": "^3.0.0",
