--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prerender-spa-plugin": "^3.4.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
+    "vue-scroll-snap": "^0.1.10",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
